include/El/lapack_like/funcs.py


# Triangular
# ----------
lib.ElTriangularInverse_s.argtypes = [c_uint,c_uint,c_void_p]
lib.ElTriangularInverse_s.restype = c_uint
lib.ElTriangularInverse_d.argtypes = [c_uint,c_uint,c_void_p]
lib.ElTriangularInverse_d.restype = c_uint
lib.ElTriangularInverse_c.argtypes = [c_uint,c_uint,c_void_p]
lib.ElTriangularInverse_c.restype = c_uint
lib.ElTriangularInverse_z.argtypes = [c_uint,c_uint,c_void_p]
lib.ElTriangularInverse_z.restype = c_uint
lib.ElTriangularInverseDist_s.argtypes = [c_uint,c_uint,c_void_p]
lib.ElTriangularInverseDist_s.restype = c_uint
lib.ElTriangularInverseDist_d.argtypes = [c_uint,c_uint,c_void_p]
lib.ElTriangularInverseDist_d.restype = c_uint
lib.ElTriangularInverseDist_c.argtypes = [c_uint,c_uint,c_void_p]
lib.ElTriangularInverseDist_c.restype = c_uint
lib.ElTriangularInverseDist_z.argtypes = [c_uint,c_uint,c_void_p]
lib.ElTriangularInverseDist_z.restype = c_uint
def TriangularInverse(uplo,diag,A):
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElTriangularInverse_s(uplo,diag,A.obj)
    elif A.tag == dTag: lib.ElTriangularInverse_d(uplo,diag,A.obj)
    elif A.tag == cTag: lib.ElTriangularInverse_c(uplo,diag,A.obj)
    elif A.tag == zTag: lib.ElTriangularInverse_z(uplo,diag,A.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElTriangularInverseDist_s(uplo,diag,A.obj)
    elif A.tag == dTag: lib.ElTriangularInverseDist_d(uplo,diag,A.obj)
    elif A.tag == cTag: lib.ElTriangularInverseDist_c(uplo,diag,A.obj)
    elif A.tag == zTag: lib.ElTriangularInverseDist_z(uplo,diag,A.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# Pseudoinverse
# =============
lib.ElPseudoinverse_s.argtypes = [c_void_p]
lib.ElPseudoinverse_s.restype = c_uint
lib.ElPseudoinverse_d.argtypes = [c_void_p]
lib.ElPseudoinverse_d.restype = c_uint
lib.ElPseudoinverse_c.argtypes = [c_void_p]
lib.ElPseudoinverse_c.restype = c_uint
lib.ElPseudoinverse_z.argtypes = [c_void_p]
lib.ElPseudoinverse_z.restype = c_uint
lib.ElPseudoinverseDist_s.argtypes = [c_void_p]
lib.ElPseudoinverseDist_s.restype = c_uint
lib.ElPseudoinverseDist_d.argtypes = [c_void_p]
lib.ElPseudoinverseDist_d.restype = c_uint
lib.ElPseudoinverseDist_c.argtypes = [c_void_p]
lib.ElPseudoinverseDist_c.restype = c_uint
lib.ElPseudoinverseDist_z.argtypes = [c_void_p]
lib.ElPseudoinverseDist_z.restype = c_uint
def Pseudoinverse(A):
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElPseudoinverse_s(A.obj)
    elif A.tag == dTag: lib.ElPseudoinverse_d(A.obj)
    elif A.tag == cTag: lib.ElPseudoinverse_c(A.obj)
    elif A.tag == zTag: lib.ElPseudoinverse_z(A.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElPseudoinverseDist_s(A.obj)
    elif A.tag == dTag: lib.ElPseudoinverseDist_d(A.obj)
    elif A.tag == cTag: lib.ElPseudoinverseDist_c(A.obj)
    elif A.tag == zTag: lib.ElPseudoinverseDist_z(A.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

lib.ElHermitianPseudoinverse_s.argtypes = [c_uint,c_void_p]
lib.ElHermitianPseudoinverse_s.restype = c_uint
lib.ElHermitianPseudoinverse_d.argtypes = [c_uint,c_void_p]
lib.ElHermitianPseudoinverse_d.restype = c_uint
lib.ElHermitianPseudoinverse_c.argtypes = [c_uint,c_void_p]
lib.ElHermitianPseudoinverse_c.restype = c_uint
lib.ElHermitianPseudoinverse_z.argtypes = [c_uint,c_void_p]
lib.ElHermitianPseudoinverse_z.restype = c_uint
lib.ElHermitianPseudoinverseDist_s.argtypes = [c_uint,c_void_p]
lib.ElHermitianPseudoinverseDist_s.restype = c_uint
lib.ElHermitianPseudoinverseDist_d.argtypes = [c_uint,c_void_p]
lib.ElHermitianPseudoinverseDist_d.restype = c_uint
lib.ElHermitianPseudoinverseDist_c.argtypes = [c_uint,c_void_p]
lib.ElHermitianPseudoinverseDist_c.restype = c_uint
lib.ElHermitianPseudoinverseDist_z.argtypes = [c_uint,c_void_p]
lib.ElHermitianPseudoinverseDist_z.restype = c_uint
def HermitianPseudoinverse(uplo,A):
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElHermitianPseudoinverse_s(uplo,A.obj)
    elif A.tag == dTag: lib.ElHermitianPseudoinverse_d(uplo,A.obj)
    elif A.tag == cTag: lib.ElHermitianPseudoinverse_c(uplo,A.obj)
    elif A.tag == zTag: lib.ElHermitianPseudoinverse_z(uplo,A.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElHermitianPseudoinverseDist_s(uplo,A.obj)
    elif A.tag == dTag: lib.ElHermitianPseudoinverseDist_d(uplo,A.obj)
    elif A.tag == cTag: lib.ElHermitianPseudoinverseDist_c(uplo,A.obj)
    elif A.tag == zTag: lib.ElHermitianPseudoinverseDist_z(uplo,A.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# Sign
# ====
lib.ElSign_s.argtypes = [c_void_p]
lib.ElSign_s.restype = c_uint
lib.ElSign_d.argtypes = [c_void_p]
lib.ElSign_d.restype = c_uint
lib.ElSign_c.argtypes = [c_void_p]
lib.ElSign_c.restype = c_uint
lib.ElSign_z.argtypes = [c_void_p]
lib.ElSign_z.restype = c_uint
lib.ElSignDecomp_s.argtypes = [c_void_p,c_void_p]
lib.ElSignDecomp_s.restype = c_uint
lib.ElSignDecomp_d.argtypes = [c_void_p,c_void_p]
lib.ElSignDecomp_d.restype = c_uint
lib.ElSignDecomp_c.argtypes = [c_void_p,c_void_p]
lib.ElSignDecomp_c.restype = c_uint
lib.ElSignDecomp_z.argtypes = [c_void_p,c_void_p]
lib.ElSignDecomp_z.restype = c_uint
lib.ElSignDist_s.argtypes = [c_void_p]
lib.ElSignDist_s.restype = c_uint
lib.ElSignDist_d.argtypes = [c_void_p]
lib.ElSignDist_d.restype = c_uint
lib.ElSignDist_c.argtypes = [c_void_p]
lib.ElSignDist_c.restype = c_uint
lib.ElSignDist_z.argtypes = [c_void_p]
lib.ElSignDist_z.restype = c_uint
lib.ElSignDecompDist_s.argtypes = [c_void_p,c_void_p]
lib.ElSignDecompDist_s.restype = c_uint
lib.ElSignDecompDist_d.argtypes = [c_void_p,c_void_p]
lib.ElSignDecompDist_d.restype = c_uint
lib.ElSignDecompDist_c.argtypes = [c_void_p,c_void_p]
lib.ElSignDecompDist_c.restype = c_uint
lib.ElSignDecompDist_z.argtypes = [c_void_p,c_void_p]
lib.ElSignDecompDist_z.restype = c_uint
def Sign(A,fullDecomp=False):
  if type(A) is Matrix:
    if fullDecomp:
      N = Matrix(A.tag)
      if   A.tag == sTag: lib.ElSignDecomp_s(A.obj,N.obj)
      elif A.tag == dTag: lib.ElSignDecomp_d(A.obj,N.obj)
      elif A.tag == cTag: lib.ElSignDecomp_c(A.obj,N.obj)
      elif A.tag == zTag: lib.ElSignDecomp_z(A.obj,N.obj)
      else: raise Exception('Unsupported datatype')
      return N
    else:
      if   A.tag == sTag: lib.ElSign_s(A.obj)
      elif A.tag == dTag: lib.ElSign_d(A.obj)
      elif A.tag == cTag: lib.ElSign_c(A.obj)
      elif A.tag == zTag: lib.ElSign_z(A.obj)
      else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if fullDecomp:
      N = Matrix(A.tag)
      if   A.tag == sTag: lib.ElSignDecompDist_s(A.obj,N.obj)
      elif A.tag == dTag: lib.ElSignDecompDist_d(A.obj,N.obj)
      elif A.tag == cTag: lib.ElSignDecompDist_c(A.obj,N.obj)
      elif A.tag == zTag: lib.ElSignDecompDist_z(A.obj,N.obj)
      else: raise Exception('Unsupported datatype')
      return N
    else:
      if   A.tag == sTag: lib.ElSignDist_s(A.obj)
      elif A.tag == dTag: lib.ElSignDist_d(A.obj)
      elif A.tag == cTag: lib.ElSignDist_c(A.obj)
      elif A.tag == zTag: lib.ElSignDist_z(A.obj)
      else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

lib.ElHermitianSign_s.argtypes = [c_uint,c_void_p]
lib.ElHermitianSign_s.restype = c_uint
lib.ElHermitianSign_d.argtypes = [c_uint,c_void_p]
lib.ElHermitianSign_d.restype = c_uint
lib.ElHermitianSign_c.argtypes = [c_uint,c_void_p]
lib.ElHermitianSign_c.restype = c_uint
lib.ElHermitianSign_z.argtypes = [c_uint,c_void_p]
lib.ElHermitianSign_z.restype = c_uint
lib.ElHermitianSignDecomp_s.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHermitianSignDecomp_s.restype = c_uint
lib.ElHermitianSignDecomp_d.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHermitianSignDecomp_d.restype = c_uint
lib.ElHermitianSignDecomp_c.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHermitianSignDecomp_c.restype = c_uint
lib.ElHermitianSignDecomp_z.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHermitianSignDecomp_z.restype = c_uint
lib.ElHermitianSignDist_s.argtypes = [c_uint,c_void_p]
lib.ElHermitianSignDist_s.restype = c_uint
lib.ElHermitianSignDist_d.argtypes = [c_uint,c_void_p]
lib.ElHermitianSignDist_d.restype = c_uint
lib.ElHermitianSignDist_c.argtypes = [c_uint,c_void_p]
lib.ElHermitianSignDist_c.restype = c_uint
lib.ElHermitianSignDist_z.argtypes = [c_uint,c_void_p]
lib.ElHermitianSignDist_z.restype = c_uint
lib.ElHermitianSignDecompDist_s.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHermitianSignDecompDist_s.restype = c_uint
lib.ElHermitianSignDecompDist_d.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHermitianSignDecompDist_d.restype = c_uint
lib.ElHermitianSignDecompDist_c.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHermitianSignDecompDist_c.restype = c_uint
lib.ElHermitianSignDecompDist_z.argtypes = [c_uint,c_void_p,c_void_p]
lib.ElHermitianSignDecompDist_z.restype = c_uint
def HermitianSign(uplo,A,fullDecomp=False):
  if type(A) is Matrix:
    if fullDecomp:
      N = Matrix(A.tag)
      if   A.tag == sTag: lib.ElHermitianSignDecomp_s(uplo,A.obj,N.obj)
      elif A.tag == dTag: lib.ElHermitianSignDecomp_d(uplo,A.obj,N.obj)
      elif A.tag == cTag: lib.ElHermitianSignDecomp_c(uplo,A.obj,N.obj)
      elif A.tag == zTag: lib.ElHermitianSignDecomp_z(uplo,A.obj,N.obj)
      else: raise Exception('Unsupported datatype')
      return N
    else:
      if   A.tag == sTag: lib.ElHermitianSign_s(uplo,A.obj)
      elif A.tag == dTag: lib.ElHermitianSign_d(uplo,A.obj)
      elif A.tag == cTag: lib.ElHermitianSign_c(uplo,A.obj)
      elif A.tag == zTag: lib.ElHermitianSign_z(uplo,A.obj)
      else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if fullDecomp:
      N = Matrix(A.tag)
      if   A.tag == sTag: lib.ElHermitianSignDecompDist_s(uplo,A.obj,N.obj)
      elif A.tag == dTag: lib.ElHermitianSignDecompDist_d(uplo,A.obj,N.obj)
      elif A.tag == cTag: lib.ElHermitianSignDecompDist_c(uplo,A.obj,N.obj)
      elif A.tag == zTag: lib.ElHermitianSignDecompDist_z(uplo,A.obj,N.obj)
      else: raise Exception('Unsupported datatype')
      return N
    else:
      if   A.tag == sTag: lib.ElHermitianSignDist_s(uplo,A.obj)
      elif A.tag == dTag: lib.ElHermitianSignDist_d(uplo,A.obj)
      elif A.tag == cTag: lib.ElHermitianSignDist_c(uplo,A.obj)
      elif A.tag == zTag: lib.ElHermitianSignDist_z(uplo,A.obj)
      else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')

# Square-root
# ===========
lib.ElSquareRoot_s.argtypes = [c_void_p]
lib.ElSquareRoot_s.restype = c_uint
lib.ElSquareRoot_d.argtypes = [c_void_p]
lib.ElSquareRoot_d.restype = c_uint
lib.ElSquareRoot_c.argtypes = [c_void_p]
lib.ElSquareRoot_c.restype = c_uint
lib.ElSquareRoot_z.argtypes = [c_void_p]
lib.ElSquareRoot_z.restype = c_uint
lib.ElSquareRootDist_s.argtypes = [c_void_p]
lib.ElSquareRootDist_s.restype = c_uint
lib.ElSquareRootDist_d.argtypes = [c_void_p]
lib.ElSquareRootDist_d.restype = c_uint
lib.ElSquareRootDist_c.argtypes = [c_void_p]
lib.ElSquareRootDist_c.restype = c_uint
lib.ElSquareRootDist_z.argtypes = [c_void_p]
lib.ElSquareRootDist_z.restype = c_uint
def SquareRoot(A):
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElSquareRoot_s(A.obj)
    elif A.tag == dTag: lib.ElSquareRoot_d(A.obj)
    elif A.tag == cTag: lib.ElSquareRoot_c(A.obj)
    elif A.tag == zTag: lib.ElSquareRoot_z(A.obj)
    else: raise Exception('Unsupported datatype')
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElSquareRootDist_s(A.obj)
    elif A.tag == dTag: lib.ElSquareRootDist_d(A.obj)
    elif A.tag == cTag: lib.ElSquareRootDist_c(A.obj)
    elif A.tag == zTag: lib.ElSquareRootDist_z(A.obj)
    else: raise Exception('Unsupported datatype')
  else: raise Exception('Unsupported matrix type')
